Fix: letter spacing en titulo separador (#48473)(SITETEAM)

--- a/src/websites/depor/depor-play.scss
+++ b/src/websites/depor/depor-play.scss
@@ -525,6 +525,7 @@ $bold: 700;
       @media (--only-mobile) {
         margin-left: 10px;
         text-align: left !important;
+        letter-spacing: 0.17px;
       }
     }
     &__header-title {
